<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/toolbar"
            app:titleTextColor="@color/white"
            app:contentInsetStart="0dp" />

        <TextView
            android:id="@+id/tv_alamat_lengkap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_detail_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_detail_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_alamat"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_detail_alamat_helper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tulis_nama_jalan_kantor_no_rumah"
            android:layout_below="@id/til_detail_alamat"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_marginBottom="@dimen/tv_helper_margin"/>
        <TextView
            android:id="@+id/tv_detail_alamat_helper_listener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_100"
            android:layout_below="@id/til_detail_alamat"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_marginBottom="@dimen/tv_helper_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_alamat_helper"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_label_helper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tulis_rumah_kos_kantor_dll"
            android:layout_below="@id/til_label"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_marginBottom="@dimen/tv_helper_margin"/>
        <TextView
            android:id="@+id/tv_label_helper_listener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_30"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_below="@id/til_label"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/tv_helper_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nama_penerima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_helper"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama_penerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_penerima"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_penerima_helper_listener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_64"
            android:layout_below="@id/til_nama_penerima"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_marginBottom="@dimen/tv_helper_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_no_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_penerima_helper_listener"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_marginBottom="@dimen/et_notelp_margin"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_no_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_handphone"
                android:inputType="phone"
                android:drawableEnd="@drawable/baseline_perm_contact_calendar_24"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_alamat_utama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jadikan_alamat_utama"
            style="@style/textview_item"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_below="@id/til_no_telp"/>

        <Switch
            android:id="@+id/switch_alamat_utama"
            android:layout_width="@dimen/switch_height"
            android:layout_height="@dimen/switch_height"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_below="@id/til_no_telp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            style="@style/btn_simpan_style"
            android:layout_marginRight="@dimen/marginall"
            android:layout_marginLeft="@dimen/marginall"
            android:layout_margin="20dp"
            android:layout_below="@id/tv_alamat_utama"/>

    </RelativeLayout>
</ScrollView>